--- a/index.html
+++ b/index.html
@@ -3,8 +3,31 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="css/style.css"/>
     <title>Web Page</title>
   </head>
-  <body></body>
+  <body>
+    <nav>
+        <div class="display-flex">
+            <!-- top bar  -->
+               <div class="flex-item logo">
+                  <img src="images/logo.b3b3d418.png" alt="" width="100px">
+               </div>
+               <div class="flex-item nav">
+                <ul class="display-flex">
+                    <li><a href="#"><h3><h3>Flicken</h3></a></li>
+                    <li><a href="#">About Us</a></li>
+                    <li><a href="#">Contact Us</a></li>
+                </ul>
+        </div>
+    </nav>
+    <div class="poster">
+      <h2>EMpowering the Innovation</h2>
+    <div class="display-flex">
+      <button class="flex-item poster-btn">About Us</button>
+      <button class="flex-item poster-btn">Apply</button>
+
+    </div>
+    </div>
+  </body>
 </html>
