--- a/index.html
+++ b/index.html
@@ -21,12 +21,12 @@
                 </ul>
         </div>
     </nav>
-    <div class="poster">
-      <h2>EMpowering the Innovation</h2>
-    <div class="display-flex">
+    <div class="poster text-center">
+      <h1  class="text-center">Empowering the Innovation</h1>
+      <h2>Flicken provides dedicated remote teams that work closely with you to design and build your idea.</h2>
+      <div class="display-flex btn text-center">
       <button class="flex-item poster-btn">About Us</button>
       <button class="flex-item poster-btn">Apply</button>
-
     </div>
     </div>
   </body>
