--- a/index.html
+++ b/index.html
@@ -7,20 +7,22 @@
     <title>Web Page</title>
   </head>
   <body>
-    <nav>
-        <div class="display-flex">
-            <!-- top bar  -->
-               <div class="flex-item logo">
-                  <img src="images/logo.b3b3d418.png" alt="" width="100px">
-               </div>
-               <div class="flex-item nav">
-                <ul class="display-flex">
-                    <li><a href="#"><h3><h3>Flicken</h3></a></li>
-                    <li><a href="#">About Us</a></li>
-                    <li><a href="#">Contact Us</a></li>
-                </ul>
-        </div>
-    </nav>
+    <section class="width-100">
+        <nav>
+            <div class="display-flex">
+                <!-- top bar  -->
+                   <div class="flex-item logo">
+                      <img src="images/logo.b3b3d418.png" alt="" width="100px">
+                   </div>
+                   <div class="flex-item nav">
+                    <ul class="display-flex">
+                        <li><a href="#"><h3><h3>Flicken</h3></a></li>
+                        <li><a href="#">About Us</a></li>
+                        <li><a href="#">Contact Us</a></li>
+                    </ul>
+            </div>
+        </nav>
+    </section>
     <div class="poster text-center">
       <h1  class="text-center">Empowering the Innovation</h1>
       <h2>Flicken provides dedicated remote teams that work closely with you to design and build your idea.</h2>
@@ -28,6 +30,48 @@
       <button class="flex-item poster-btn">About Us</button>
       <button class="flex-item poster-btn">Apply</button>
     </div>
+    </div>
+    <div class="about boundary">
+       <h6>About Us</h6>
+       <h1>We're technology and product Innovation Company</h1>
+       <h2> Lorem ipsum dolor sit amet consectetur adipisicing elit. A quis, unde assumenda aspernatur beatae quos, quibusdam laudantium voluptatum excepturi, vero accusamus fuga consequuntur dolores itaque natus libero ipsa. Et, facilis!</h2>
+    </div>
+    <div class="services boundary">
+        <h1>OUR SRRVICES</h1>
+        <div class="row display-flex text-center">
+         <div class="flex-item box">
+            <img src="images/dataeng.png" alt="">
+            <h3>Data Engineering/Data Analysis</h3>
+            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Inventore, debitis delectus excepturi, molestiae ipsum eius recusandae pariatur atque necessitatibus asperiores sint unde modi rerum, sit corporis provident laudantium ratione aperiam.</p>
+         </div>
+         <div class="flex-item box">
+            <img src="images/blockchain.png" alt="">
+            <h3>Blockchain</h3>
+            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Inventore, debitis delectus excepturi, molestiae ipsum eius recusandae pariatur atque necessitatibus asperiores sint unde modi rerum, sit corporis provident laudantium ratione aperiam.</p>
+         </div>
+         <div class="flex-item box">
+            <img src="images/webdev.png" alt="">
+            <h3>Web Development</h3>
+            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Inventore, debitis delectus excepturi, molestiae ipsum eius recusandae pariatur atque necessitatibus asperiores sint unde modi rerum, sit corporis provident laudantium ratione aperiam.</p>
+         </div>
+        </div>
+        <div class="row display-flex text-center">
+        <div class="flex-item box">
+            <img src="images/mobile.png" alt="">
+            <h3>Mobile App Development</h3>
+            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Inventore, debitis delectus excepturi, molestiae ipsum eius recusandae pariatur atque necessitatibus asperiores sint unde modi rerum, sit corporis provident laudantium ratione aperiam.</p>
+         </div>
+         <div class="flex-item box">
+            <img src="images/ui.png" alt="">
+            <h3>UI/UX Design</h3>
+            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Inventore, debitis delectus excepturi, molestiae ipsum eius recusandae pariatur atque necessitatibus asperiores sint unde modi rerum, sit corporis provident laudantium ratione aperiam.</p>
+         </div>
+         <div class="flex-item box">
+            <img src="images/devop.png" alt="">
+            <h3>DevOps</h3>
+            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Inventore, debitis delectus excepturi, molestiae ipsum eius recusandae pariatur atque necessitatibus asperiores sint unde modi rerum, sit corporis provident laudantium ratione aperiam.</p>
+         </div>
+         </div>
     </div>
   </body>
 </html>
