--- a/index.html
+++ b/index.html
@@ -101,23 +101,24 @@
           </form>
 
     </div>
-    <div class="boundary">
+    <div class="boundary footer">
         <footer class="display-flex">
             <div class="flex-item box">
                <h3>Project Scoping</h3>
-               <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Inventore, debitis delectus excepturi, molestiae ipsum eius recusandae pariatur atque necessitatibus asperiores sint unde modi rerum, sit corporis provident laudantium ratione aperiam.</p>
+               <p>Lorem ipsum, dolor sit amet consectetur adipisicing</p>
             </div>
             <div class="flex-item box">
                 <h4>Products</h4>
                 <ul style="text-decoration:none;">
-                    <li>Suppoerr</li>
-                    <li>Evaluation</li>
-                    <li>UI/UX Design</li>
-                    <li>Development</li>
+                    <li><a href="">Support</a></li>
+                    <li><a href="">Evaluation</a></li>
+                    <li><a href="">UI/UX Design</a></li>
+                    <li><a href="">Development</a></li>
                 </ul>
+                </div>
             <div class="flex-item box">
                <h3>Web Development</h3>
-               <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Inventore, debitis delectus excepturi, molestiae ipsum eius recusandae pariatur atque necessitatibus asperiores sint unde modi rerum, sit corporis provident laudantium ratione aperiam.</p>
+               <p>Lorem ipsum, dolor sit amet consectetur adipisicintur atque  provident laudantium ratione aperiam.</p>
             </div>
             <div class="flex-item box">
               <h3>CONTACT</h3>
@@ -126,7 +127,9 @@
               <p>info@flicken.io</p>
              </div>
         </footer>
-
     </div>
+    <div class="last-footer text-center">
+        <p>Flicken 2023 All Rights Reserved</p>
+        </div>
   </body>
 </html>
