--- a/index.html
+++ b/index.html
@@ -109,12 +109,12 @@
             </div>
             <div class="flex-item box">
                 <h4>Products</h4>
-                <ul style="text-decoration:none;">
+                <!-- <ul style="text-decoration:none;"> -->
                     <li><a href="">Support</a></li>
                     <li><a href="">Evaluation</a></li>
                     <li><a href="">UI/UX Design</a></li>
                     <li><a href="">Development</a></li>
-                </ul>
+                <!-- </ul> -->
                 </div>
             <div class="flex-item box">
                <h3>Web Development</h3>
